Fix T46762: UV transfer Object transform crash.

Own very stupid mistake this time... :|